# sir_model

./: Cargo.toml  README.md  index.html  main.js
pkg/: sir_model.js  sir_model_bg.wasm
src/: lib.rs
